test/cases/compile_errors/zon/type_expr_struct.zon
Vec2{ .x = 1.0, .y = 2.0 }